Hot fix issues with collapsed nav bar not display on mobile view

--- a/client/src/sass/components/_nav.sass
+++ b/client/src/sass/components/_nav.sass
@@ -13,7 +13,7 @@
   //$include: flexCenter
   // background-image: linear-gradient(#B6A39D 0%, #ffffff 100%)
   // background-attachment: fixed
-  background:  rgba(231,112,0,0.8)
+  background:  rgba(231,112,0)
 
   &__container
     $include: flexCenter
@@ -45,12 +45,13 @@ a:hover,
 .collapse 
   // background: black
 
-.navbar-collapse 
-  // background: black
+.navbar-collapse
+  //width:50%
+  background: rgba(231,112,0)
 
 .navbar-nav
-  // background: $dusk
-  // text: $dark
+   //background: $dusk
+   //text: $dark
 
 // .nav-item
 //   background: black
