--- a/client/src/sass/main.sass
+++ b/client/src/sass/main.sass
@@ -40,13 +40,11 @@
   margin-top: 4rem
 
 .section__image
-  width:25%
+  //width:25%
   border-radius: 15%
 
-
 .card-img
-  width:50%
-
+  //width:50%
 
 .container
   display: block
